--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
+    "navigationBarTitleText": "uli的小游戏呀",
     "navigationBarTextStyle":"black"
   },
   "style": "v2",
